# GildedRose

./: GildedRose.java  Specs.txt
C/: CMakeLists.txt
C/test/: GildedRoseUnitTests.cc
CPP/: CMakeLists.txt
CPP/test/: GildedRoseUnitTests.cc
csharp/: GildedRose.cs  GildedRoseTest.cs
java/: GildedRose.java  GildedRoseTest.java  Item.java
